add txt content style

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <html>
  
 <head>
-    <title>Read Text File</title>
+    <title>Reader</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
  
 <body>
     <input type="file" name="inputfile" id="inputfile">
 
-    <div id="content" style="font-size: 25px; color: rgb(0, 0, 0); background-color:#e6f3ff;"></div>
+    <div id="content" class='contentStyle' style="font-size: 25px; color: rgb(0, 0, 0); background-color:#e6f3ff;"></div>
     <button onclick="nextChapter()">下一章</button> 
 
     <script type="text/javascript" src="./scripts/reader.js"></script>
