--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
  
 <body>
-    <input type="file" name="inputfile" id="inputfile">
+    <input type="file" name="inputfile" id="inputfile"><br>
+    <button onclick="catalog()">目录</button>
 
     <div id="content" class='contentStyle' style="font-size: 25px; color: rgb(0, 0, 0); background-color:#e6f3ff;"></div>
     <button onclick="nextChapter()">下一章</button> 
