--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <button onclick="catalog()">目录</button>
 
     <div id="content" class='contentStyle' style="font-size: 25px; color: rgb(0, 0, 0); background-color:#e6f3ff;"></div>
+    <button onclick="preChapter()">上一章</button>&nbsp;&nbsp;&nbsp;
     <button onclick="catalog()">目录</button>&nbsp;&nbsp;&nbsp;
     <button onclick="nextChapter()">下一章</button> 
 
