--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
  
 <body>
     <input type="file" name="inputfile" id="inputfile"><br>
+    <button onclick="pageRead()">按页阅读</button><br>
     <div id="top" style="text-align:center">
         <button onclick="preChapter()">上一章</button>&nbsp;&nbsp;&nbsp;
         <button onclick="catalog()">目录</button>&nbsp;&nbsp;&nbsp;
