--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <button onclick="nextChapter()">下一章</button>
     </div> 
 
+    <!-- From https://unpkg.com/detect-file-encoding-and-language/umd/language-encoding.min.js -->
     <script type="text/javascript" src="./scripts/language-encoding.min.js"></script>
     <script type="text/javascript" src="./scripts/reader.js"></script>
 </body>
